--- a/plays/templates/plays/partials/table_games.html
+++ b/plays/templates/plays/partials/table_games.html
@@ -6,7 +6,7 @@
         {% if show_sub_title %}
             <tr class="tb-subtitle">
                 <td colspan="3">{{ section_name }}</td>
-                <td class="pull-right"><a href="{% url 'plays:table' slug=league.slug  %}?season={{ current_season }}">Tabela</a></td>
+                <td class="pull-right"><a href="{% url 'plays:table' slug=league_obj.slug  %}?season={{ current_season }}">Tabela</a></td>
             </tr>
         {% endif %}
     {% for name, data in section_data.items %}
@@ -38,7 +38,7 @@
            {% if more_games %}
            <tr style="border:0px;">
             <td colspan="4">
-                <a href="{% if section_name == "Rozegrane mecze" %}{% url 'plays:scores' slug=league.slug  %}{% else %}{% url 'plays:next_games' slug=league.slug  %}{% endif %}?season={{ current_season }}">Pokaż więcej meczów... </a>
+                <a href="{% if section_name == "Rozegrane mecze" %}{% url 'plays:scores' slug=league_obj.slug  %}{% else %}{% url 'plays:next_games' slug=league_obj.slug  %}{% endif %}?season={{ current_season }}">Pokaż więcej meczów... </a>
   
             </td>
             </tr>
@@ -59,7 +59,7 @@
         <tr class="tb-subtitle">
             <td colspan="3"><span class="text">{{ section_name }}</span></td>
             <td class="pull-right">
-                <a href="{% url 'plays:table' slug=league.slug  %}?season={{ current_season }}">Tabela</a></td>
+                <a href="{% url 'plays:table' slug=league_obj.slug  %}?season={{ current_season }}">Tabela</a></td>
         </tr>
     {% endif %}
 
@@ -89,7 +89,7 @@
            {% if more_games %}
            <tr style="border:0px;">
             <td colspan="4">
-                <a href="{% if section_name == "Rozegrane mecze" %}{% url 'plays:scores' slug=league.slug  %}{% else %}{% url 'plays:next_games' slug=league.slug  %}{% endif %}?season={{ current_season }}">Pokaż więcej meczów... </a>
+                <a href="{% if section_name == "Rozegrane mecze" %}{% url 'plays:scores' slug=league_obj.slug  %}{% else %}{% url 'plays:next_games' slug=league_obj.slug  %}{% endif %}?season={{ current_season }}">Pokaż więcej meczów... </a>
             </td>
             </tr>
             {% endif %}
