--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -213,7 +213,7 @@ span.text {
 
 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4 %}   
+    {% include '_page_heading.html' with heading_title=page_title %}   
 {% endblock %}
 
 
