--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -6,7 +6,7 @@
 
 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4 %}
+    {% include '_page_heading.html' with heading_title=page_title %}
     {{ block.super }}
 {% endblock %}
 
