--- a/profiles/templates/profiles/fantasy2.html
+++ b/profiles/templates/profiles/fantasy2.html
@@ -10,7 +10,7 @@
 
 {% comment %} 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4 %}
+    {% include '_page_heading.html' with heading_title=page_title %}
     {{ block.super }}
 {% endblock %} {% endcomment %}
 
