--- a/profiles/templates/profiles/show_club_profile.html
+++ b/profiles/templates/profiles/show_club_profile.html
@@ -4,13 +4,13 @@
 {% load thumbnail %}
 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4 %}
+    {% include '_page_heading.html' with heading_title=page_title %}
     {{ block.super }}
 {% endblock %}
 
 
 
-{% block content %}  <!-- @todo frontend to be renovated to adjust template-->
+{% block content %}
 <section id="profile" class="profile" style="padding-top:10px;">
   <div class="containerprofile-container" data-aos="fade-up">
       <div class="row">
