--- a/profiles/templates/profiles/show_coach_profile.html
+++ b/profiles/templates/profiles/show_coach_profile.html
@@ -11,11 +11,11 @@
 
 
 {% block content_header %}
-    {% include '_page_heading.html' with heading_title=page_title size=4  %}
+    {% include '_page_heading.html' with heading_title=page_title %}
     {{ block.super }}
 {% endblock %}
 
-{% block content %}  <!-- @todo frontend to be renovated to adjust template-->
+{% block content %}
 
 {% include 'profiles/player_subpage_header_black.html' %}
 
