--- a/soccerbase/templates/soccerbase/tables/filters/filter_position_ms.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_position_ms.html
@@ -1,14 +1,12 @@
 {% load playmaker %}
 <select name="position" data-width="{{ size }}" title="pozycja" class="selectpicker" data-actions-box="true" multiple data-live-search="true" data-selected-text-format="count > 3">
-
 <option {% if "Bramkarz" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Bramkarz</option>
 <option {% if "Obrońca Lewy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Lewy</option>
 <option {% if "Obrońca Prawy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Prawy</option>
 <option {% if "Obrońca Środkowy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Środkowy</option>
-<option {% if "Pomocnik Defensywny (6)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Defensywny (6)</option>
-<option {% if "Pomocnik Środkowy (8)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Środkowy (8)</option>
-<option {% if "Pomocnik Ofensywny (10)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Ofensywny (10)</option>
+<option {% if "Pomocnik defensywny (6)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik defensywny (6)</option>
+<option {% if "Pomocnik środkowy (8)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik środkowy (8)</option>
+<option {% if "Pomocnik ofensywny (10)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik ofensywny (10)</option>
 <option {% if "Skrzydłowy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Skrzydłowy</option>
 <option {% if "Napastnik" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Napastnik</option>
-    
 </select>
