--- a/marketplace/templates/marketplace/filters.html
+++ b/marketplace/templates/marketplace/filters.html
@@ -6,7 +6,7 @@
   <div class="container-fluid">
       <form id="filter-form" method="get" class="form-inline d-flex">    
         {% include 'marketplace/_filters.html' with size=120 %}
-        <div class="ilter-button"> 
+        <div class="filter-button">
             {% include 'marketplace/filter_button.html' with mobile=True %}
         </div>
       </form>
