--- a/marketplace/templates/marketplace/announcement_coach_for_club.html
+++ b/marketplace/templates/marketplace/announcement_coach_for_club.html
@@ -3,12 +3,9 @@
 {% load i18n %}
 
 <div class="card announcement-card m-1 serv-section-2">
-<!--    <div class="serv-section-2-icon"> <img class="avatar rounded img-responsive"  src="{% thumbnail object.club.picture|default:'default_club.png' 'club_small' %}">-->
-<!--    </div>-->
         <div class="serv-section-desc">
             <h4>
-<!--                <a  href="{{ object.club.get_permalink }}">{{ object.club.name }}</a>-->
-                <a  href="{{ object.club.get_permalink }}">Trener {{ object.creator.first_name }} {{ object.creator.last_name }}</a>
+                <a  href="{{ object.creator.profile.get_permalink }}">Trener {{ object.creator.first_name }} {{ object.creator.last_name }}</a>
                 <span class="badge badge-info" style="float: right">Trener szuka klubu</span>
             </h4>
             <h5>{{ object.creator.coachprofile.get_team|default:'Bez klubu' }} </h5>
@@ -67,6 +64,12 @@
                 {% if user.is_coach %}
                     {% announcement_edit object %}
                 {% endif %}
+            </div>
+            <div>
+              <button type="button" class="btn-request" onclick="window.location.href='{{ object.creator.profile.get_permalink }}';">Zobacz profil</button>
+            </div>
+            <div>
+              <button type="button" class="btn-request" onclick="">Udostępnij</button>
             </div>
         </div>
     </div>
