--- a/marketplace/templates/marketplace/filters/filter_seniority.html
+++ b/marketplace/templates/marketplace/filters/filter_seniority.html
@@ -1,5 +1,5 @@
 
-<select name="seniority" data-width="{{ size|add:20 }}"  class="form-control selectpicker" data-allow-clear="true" title="starszeństwo">
+<select name="seniority" data-width="{{ size|add:20 }}"  class="form-control selectpicker" data-allow-clear="true" title="rozgrywki">
 {% for option in options %}
     <option {% if request.GET.seniority == option %} selected {% endif %} value="{{ option }}">{{ option }}</option>
 {% endfor %}
