--- a/profiles/templates/profiles/modals/_approve_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_approve_announcement_modal.html
@@ -3,7 +3,7 @@
 
 {% load i18n %}
 {% load playmaker %}
-{% with id="approveAnnouncementModal" title='Czy na pewno chcesz się zglosić?' %}
+{% with id="approveAnnouncementModal" title='Czy na pewno chcesz wykonać tę akcję?' %}
   <div class="modal fade" id="{{ id }}" tabindex="-1" role="dialog" aria-labelledby="{{ id }}Label" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
