poprawki do marketplace

--- a/marketplace/templates/marketplace/_filters.html
+++ b/marketplace/templates/marketplace/_filters.html
@@ -23,4 +23,8 @@
         {% include 'marketplace/filters/filters_club_for_coach.html' with size=size %}
     {% endif %}
 
+    {% if mobile %}
+
+    {% endif %}
+
 {% endwith %}
