--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -150,6 +150,13 @@
 <!--.serv-section-2:hover:before {-->
 <!--    background: #e76668;-->
 <!--}-->
+
+.centered-div {
+    flex: display;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+}
 </style>
 
 <section id="marketplace" class="marketplace">
