--- a/marketplace/templates/marketplace/announcement_coach_for_club.html
+++ b/marketplace/templates/marketplace/announcement_coach_for_club.html
@@ -38,14 +38,8 @@
         </div>
     </div>
 
-    <div class="card-footer row no-gutters">
-        <div class="card-text text-center d-inline-flex justify-content-center align-content-center flex-wrap">
-            {% if object.www %}
-            <div>
-                <small class="text-muted"><a href="{{ object.www }}">{% trans 'Link do ogłoszenia / strony www klubu' %}</a> </small>
-            </div>
-            {% endif %}
-
+    <div class="card-footer no-gutters">
+        <div class="row card-text text-center centered-div">
             <div class="card-text">
                 <i class="icofont-list"></i>
                 <small class="text-muted"> {{ object.subscribers.count }} odpowiedzi </small>
@@ -55,9 +49,9 @@
                 <i class="icofont-wall-clock"></i>
                 <small class="text-muted"> {{ object.expire|days_until }}</small>
             </div>
-            
+        </div>
+        <div class="row card-text text-center centered-div">
             <div class="card-text pull-right">
-            
                 {% if user.is_club %}
                     {% announcement_response object %}
                 {% endif %}
@@ -65,9 +59,11 @@
                     {% announcement_edit object %}
                 {% endif %}
             </div>
+
             <div>
-              <button type="button" class="btn-request" onclick="window.location.href='{{ object.creator.profile.get_permalink }}';">Zobacz profil</button>
+              <button type="button" class="btn-request" onclick="window.location.href='/users/{{ object.creator.profile.get_permalink }}';">Zobacz profil</button>
             </div>
+
             <div>
               <button type="button" class="btn-request" onclick="">Udostępnij</button>
             </div>
