--- a/marketplace/templates/marketplace/filters/filters_club_for_coach.html
+++ b/marketplace/templates/marketplace/filters/filters_club_for_coach.html
@@ -1,6 +1,6 @@
 {% with size=size %}
      <div class="filter pr-2">
-        {% include 'marketplace/filters/filter_licence.html' with size=size options=filters.licence %}
+        {% include 'marketplace/filters/filter_licence.html' with size=size %}
     </div>
 
 {% endwith %}
