--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -39,6 +39,10 @@
 </div>
 
 </section>
+
+<script>
+  document.getElementById("id_address").value = "{% if address != None %}{{ address }}{% else %}{% endif %}";
+</script>
 {% endblock content %}
 
 
