--- a/profiles/templates/profiles/show_player_profile.html
+++ b/profiles/templates/profiles/show_player_profile.html
@@ -25,7 +25,9 @@
       <div class="col-sm-6">{% include 'profiles/cards/player/card_season.html' %}</div>
       <div class="col-sm-6">{% include 'profiles/cards/player/card_additional_info.html' %}</div>  
       <div class="col-sm-6">{% include 'profiles/cards/player/card_latest_games.html' %}</div>
-      <div class="col-sm-6">{% include 'profiles/cards/player/card_about.html' %}</div>
+      {% if show_user.profile.about %}
+        <div class="col-sm-6">{% include 'profiles/cards/player/card_about.html' %}</div>
+      {% endif %}
       <div class="col-sm-6">{% include 'profiles/cards/player/card_fantasy.html' %}</div>
       <div class="col-sm-6">{% include 'profiles/cards/player/card_video_1.html' %}</div>
       {% if show_user.profile.video_url %}
